# LiteQuery

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.ps1  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: README.md  bench.cpp  bench_sqlite.cpp
bindings/python/: .gitignore  MANIFEST.in  README.md  build_lib.py  pyproject.toml
bindings/python/litequery/: __init__.py  _ffi.py
bindings/python/tests/: test_litequery.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/examples/: demo.rs
bindings/rust/src/: ffi.rs  lib.rs
bindings/rust/tests/: basic.rs
cmake/: LiteQueryConfig.cmake.in
docs/: architecture.md  c-api.md  product-roadmap.md  shell.md  sql-reference.md
examples/: demo.cpp
include/litequery/: litequery.h  types.h
src/api/: c_api.cpp  connection.cpp  connection.h
src/catalog/: catalog.h
src/execution/: eval.cpp  eval.h  fast_aggregate.cpp  fast_aggregate.h  physical_plan.cpp  physical_plan.h
src/parser/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/planner/: logical_plan.cpp  logical_plan.h  optimizer.cpp  optimizer.h
src/storage/: column.h  csv_reader.cpp  csv_reader.h  persistence.cpp  persistence.h  table.h
tests/: test_capi.c  test_framework.h  test_litequery.cpp
tools/: lq_shell.cpp
